Attempt to fix fonts on mobile

--- a/styles/page.module.css
+++ b/styles/page.module.css
@@ -66,7 +66,7 @@
 
 .descriptionTitle {
   font-size: 22.5px;
-  font-weight: bold;
+  font-weight: 600;
   margin-bottom: 2.5px;
 }
 
